syntax = "proto3";

package pb;

option java_package = "pb.xiugou.x1.protobuf.promotion";
option csharp_namespace = "pb.xiugou.x1.protobuf";

import "MiniStruct.proto";

//七日目标信息
message QiRiMuBiaoInfoResponse {
	enum Proto {UNKNOWN = 0; ID = 2100701;}

	int32 day = 1;						//当前任务解锁的天数
	repeated PbTask tasks = 2;			//任务数据
	int64 end_time = 3;					//结束时间，毫秒
	repeated int32 stage_rewards = 4;	//已经领取的阶段奖励
}

//七日目标获取任务奖励
message QRMBTakeTaskRewardRequest {
	enum Proto {UNKNOWN = 0; ID = 2100702;}
	
	int32 task_id = 1;	//任务ID
}
message QRMBTakeTaskRewardResponse {
	enum Proto {UNKNOWN = 0; ID = 2100702;}
	
	PbTask task = 1;	//任务数据
}

//七日目标是否已经领取获取任务奖励
message QRMBTakeFinalRewardRequest {
	enum Proto {UNKNOWN = 0; ID = 2100703;}
	
	int32 stage_id = 1;	//阶段ID
}
message QRMBTakeFinalRewardResponse {
	enum Proto {UNKNOWN = 0; ID = 2100703;}
	
	int32 stage_id = 1;	//阶段ID
}